--- a/app/views/pages/homecomprador.ejs
+++ b/app/views/pages/homecomprador.ejs
@@ -108,7 +108,7 @@
         </nav>
         <img src="imagens/logo.png" class="logo">
         <a href="/menu">
-          <img src="imagens/carrinho.png" alt="Foto de Maria" />
+          <img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : 'imagens/carrinho.png' %>" alt="Foto de Maria" class="profile-pic" />
         </a>
       </nav>
     </header>
