--- a/app/views/pages/produto2.ejs
+++ b/app/views/pages/produto2.ejs
@@ -322,8 +322,7 @@
             .then(response => response.json())
             .then(data => {
                 if (data.success) {
-                    alert('Produto adicionado ao carrinho!');
-                    window.location.href = '/carrinho';
+                    window.location.href = '/finalizandocompra2';
                 } else {
                     alert('Erro ao adicionar produto');
                 }
