--- a/app/views/pages/menu.ejs
+++ b/app/views/pages/menu.ejs
@@ -10,34 +10,52 @@
     
 </head>
 <body>
-    <header>
-        <section class="top-bar">
-            <p class="top-bar">10% OFF na primeira compra</p>
-        </section>
-        <section class="main-header">
-            <a href="/homecomprador">
-            <img src="imagens/logo.png" class="img-logo">
-            </a>
-            <nav>
-                <a href="/categorias">Vestidos</a>
-                <a href="/categorias">Saias</a>
-                <a href="/categorias">Blusas</a>
-                <a href="/categorias">Calças</a>
-                <a href="/categorias">Outros</a>
-            </nav>
-            <section class="search-profile">
-                <form>
-                    <input type="text" placeholder="Buscar...">
-                </form>
-                <ul>
-                    <li><a href="/criarbrech" ></a><img src="imagens/add brecho.png" class="img-tamanho"> </li>
-                    <li><a href="#" ><img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : 'imagens/imagem sem cadastro.avif' %>" class="maria"></a> </li>
-                    <li><a href="/carrinho" ><img src="imagens/carrinho3.png" class="img-tamanho"> </a></li>
-                    <li><a href="/favoritos" ><img src="imagens/icone coraçao.png" class="img-tamanho"> </a></li>
-                </ul>
+    <section class="oculto-mobile">
+        <header>
+            <section class="top-bar">
+                <p class="top-bar">10% OFF na primeira compra</p>
             </section>
-        </section>
-    </header>
+            <section class="main-header">
+                <a href="/homecomprador">
+                <img src="imagens/logo.png" class="img-logo">
+                </a>
+                <nav>
+                    <a href="/categorias">Vestidos</a>
+                    <a href="/categorias">Saias</a>
+                    <a href="/categorias">Blusas</a>
+                    <a href="/categorias">Calças</a>
+                    <a href="/categorias">Outros</a>
+                </nav>
+                <section class="search-profile">
+                    <form>
+                        <input type="text" placeholder="Buscar...">
+                    </form>
+                    <ul>
+                        <li><a href="/criarbrech" ></a><img src="imagens/add brecho.png" class="img-tamanho"> </li>
+                        <li><a href="#" ><img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : 'imagens/imagem sem cadastro.avif' %>" class="maria"></a> </li>
+                        <li><a href="/carrinho" ><img src="imagens/carrinho3.png" class="img-tamanho"> </a></li>
+                        <li><a href="/favoritos" ><img src="imagens/icone coraçao.png" class="img-tamanho"> </a></li>
+                    </ul>
+                </section>
+            </section>
+        </header>
+    </section>
+
+    <section class="oculto-desktop">
+        <header>
+            <nav class="grid">
+                <a href="/homecomprador">
+                    <img src="imagens/seta.png" alt="Voltar">
+                </a>
+                <img src="imagens/logo.png" alt="Vintélo">
+                <a href="/menu">
+                    <div class="profile-container">
+                        <img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : 'imagens/carrinho.png' %>" alt="Menu" class="profile-pic">
+                    </div>
+                </a>
+            </nav>
+        </header>
+    </section>
     
     <main>
         <aside class="user-sidebar">
